# MirrorShard_2

./: .gitignore  Changelog.md  LICENSE  README.md  ai_chat.html  export.html  index.html  package.json  pnpm-lock.yaml  preview.html  settings.html  tsconfig.json  vite.config.ts
docs/: AI機能使用ガイド.md  FAQ.md  Linux版について.md  その他わりとどうでもいい情報.md
src/: ai_chat.css  ai_chat.ts  ai_chat_main.ts  export.css  main.ts  preview.css  preview.ts  settings.css  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/docs/: Changelog.md  FAQ.md  README.md
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: images.ts  type-sound.ts
src/scripts/: ruby.ts
